<resources>
    <string name="app_name">Latest News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">read more</string>
    <string name="addToFav">Favourite</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="no_data_exist">Sorry  something went  wrong while fetching data</string>
    <string name="menu_details">Details</string>
</resources>