<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_details"
            app:destination="@id/nav_gallery" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.details.DetailsFragment"
        android:label="@string/menu_details"
        tools:layout="@layout/fragment_details" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/login2"
        android:name="com.example.myapplication.ui.login.Login"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_login2_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_login2_to_register2"
            app:destination="@id/register2" />
    </fragment>
    <fragment
        android:id="@+id/register2"
        android:name="com.example.myapplication.ui.register.Register"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_register2_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_register2_to_login2"
            app:destination="@id/login2" />
    </fragment>
</navigation>